--- a/Testes&&Exerc/Exercicio Dia 2/index.html
+++ b/Testes&&Exerc/Exercicio Dia 2/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Desafio 1</h1>
