--- a/JAVASCRIPT/Códigos-Exemplo/Guess the Number/Antes/index.html
+++ b/JAVASCRIPT/Códigos-Exemplo/Guess the Number/Antes/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Guess the number</title>
   </head>
-  <body>
+  <body onload="init()">
     <main>
       <div id="welcomeScreen">
         <h2>Guess the Number <br />1 - 100</h2>
@@ -15,8 +15,8 @@
 
       <div id="gameArea">
         <section>
-          <h3 id="textOutput">Your Guess:</h3>
-          <input type="number" id="inputBox" min="1" max="100"/>
+          <h3 id="textOutput">Sua Tentativa:</h3>
+          <input type="number" id="inputBox" min="1" max="100" onchange="compareNumbers()"/>
         </section>
         <section class="stats">
           <div class="info">
@@ -28,7 +28,7 @@
             <span id="guesses">0</span>
           </div>
         </section>
-        <button id="newGameButton">NEW GAME</button>
+        <button id="newGameButton" onclick="init()">NEW GAME</button>
       </div>
     </main>
     <script src="index.js"></script>
