Reorganização dos arquivos

--- a/JAVASCRIPT/CURSO_ALURA/Códigos-Exemplo/Calculadora_Gorgeta/Antes/index.html
+++ b/JAVASCRIPT/CURSO_ALURA/Códigos-Exemplo/Calculadora_Gorgeta/Antes/index.html
@@ -20,7 +20,7 @@
 
     <!-- Calculadora -->
     <main id="Calculadora" oninput="update()">
-      <h1>Calculadora Gorgeta</h1>
+      <h1 id="titulo">Calculadora Gorgeta</h1>
       <section>
         <div class="bill">
           <label for="yourBill">Conta</label>
